# sea-migrations

./: .gitignore  Cargo.toml  README.md
derive/: Cargo.toml
derive/src/: lib.rs
example/: Cargo.toml
example/src/: main.rs
example/src/models/: customer.rs  customer2.rs  mod.rs  tax_info.rs
src/: lib.rs  migrations_table.rs  seaorm_integration.rs
