[package]
name = "sea-migrations-derive"
version = "0.0.3"
authors = [ "Oscar Beaumont <oscar@otbeaumont.me>" ]
edition = "2021"
description = "Derive macros for sea-migrations crate. Don't use directly!"
repository = "https://github.com/oscartbeaumont/sea-migrations"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.82"
quote = "1.0.10"
