[package]
name = "sea-migrations-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sea-orm = { version = "^0", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros", "mock" ], default-features = false }
sea-migrations = { path = "../" }
tokio = { version = "1.13.0", features = [ "macros" ] }
async-trait = "0.1.51"
